--- a/blog-express/views/admin.jade
+++ b/blog-express/views/admin.jade
@@ -3,7 +3,7 @@ extends layout
 block page
   - var menu = 'admin'
 block content
-  div.main
+  div.admin
     if (articles.length === 0)
       p
         | Nothing to display. Add a new
@@ -22,8 +22,8 @@ block content
                 button.btn.btn-danger.btn-sm.remove(type="button")
                   span.glyphicon.glyphicon-remove(title="remove")
               td.action
-                button.btn.btn-danger.btn-sm.publish(type="button")
+                button.btn.btn-defalut.btn-sm.publish(type="button")
                   span.glyphicon(class=(article.published)?"glyphicon-pause":"glyphicon-play", title=(article.published)?"Unpublish":"Publish")
               td= article.title
-  scirpt(type="text/javascript", src="js/admin.js")
+  script(type="text/javascript", src="/js/admin.js")
 
